--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm an electronic engineer working in an R&D center moving to SW development solutions</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Puebla, Pue.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Making Coffee and Drinks</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>That where I can technically challenge my team to deliver ther best</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Zona Esmeralda</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To understand how additional value can be delivered to our customers</p>
     </section>
 
     <footer id="footer">
