Correcting a Typo on my details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Making Coffee and Drinks</p>
       <h1>What's your dream job?</h1>
-      <p>That where I can technically challenge my team to deliver ther best</p>
+      <p>That where I can technically challenge my team to deliver their best</p>
       <h1>Where do you live?</h1>
       <p>Zona Esmeralda</p>
       <h1>Why do you want to be a web developer?</h1>
